--- a/client/src/main/resources/ru/gb/layout.fxml
+++ b/client/src/main/resources/ru/gb/layout.fxml
@@ -1,3 +1,5 @@
+
+
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
@@ -7,7 +9,7 @@
 <?import javafx.scene.text.*?>
 
 <VBox prefHeight="451.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.clientside.MainController">
+      fx:controller="ru.gb.client.MainController">
 
    <!-- Окно авторизации / регистрации -->
    <VBox fx:id="authPanel" prefHeight="451.0" prefWidth="780.0">
